--- a/main.css
+++ b/main.css
@@ -1,6 +1,15 @@
 @import url(https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css);
 @import url(https://use.fontawesome.com/releases/v5.7.2/css/all.css);
 
+.card[data-v-56b687e3] {
+  border: 0.2rem solid #ededed;
+}
+.tip[data-v-56b687e3] {
+  padding-top: 0.4rem;
+  font-size: 0.6rem;
+}
+
+
 .container-fluid {
   height: 100vh;
 }
